# py-amqp-client

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.pip  requirements.txt  run-client.py  run-tests.sh  run_tests.sh  setup.cfg  setup.py
amqpclient/: __init__.py  asyncio.py  basic.py  handlers.py  logger.py  publish.py  subscribe.py  version.py
amqpclient/aio/: __init__.py  connection.py  logger.py  pub.py  rpc.py
amqpclient/concurrent/: __init__.py  connection.py  logger.py  pub.py  rpc.py
amqpclient/tests/: test_async_rpc_client.py  test_async_rpc_worker.py  test_async_subscriber.py
liz_amqp/: __init__.py  basic.py  logger.py  publish.py  subscribe.py  version.py
liz_amqp/concurrent/: __init__.py
liz_amqp/tests/: test_async_rpc_client.py  test_async_rpc_worker.py  test_async_subscriber.py
