[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "py-amqp-client"
description = "AMQP synchronous/asynchronous messaging"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "pika>=1.3.2",
]
version = "2.0.0"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.setuptools.packages.find]
include = [
    "amqpclient",
    "amqpclient.*",
]

[tool.autopep8]
max_line = 120
in-place = true
recursive = true

